// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render as headline 1`] = `
<div>
  <label
    class="input default left headline"
  >
    <input
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render undefined value as empty string 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`Input should render when disabled 1`] = `
<div>
  <label
    class="input default left disabled"
  >
    <input
      disabled=""
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with a character counter 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="text"
      value="asdf"
    />
  </label>
  <label
    class="characterCounter exceeded"
  >
    -2 sulu_admin.characters_left
  </label>
</div>
`;

exports[`Input should render with a segment counter 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="text"
      value="keyword1, keyword2"
    />
  </label>
  <label
    class="segmentCounter"
  >
    1
     
    sulu_admin.segments_left
  </label>
</div>
`;

exports[`Input should render with autocomplete off 1`] = `
<div>
  <label
    class="input default left disabled"
  >
    <input
      autocomplete="off"
      disabled=""
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with icon 1`] = `
<div>
  <label
    class="input default left"
  >
    <div
      class="prependedContainer default"
    >
      <span
        aria-label="su-pen"
        class="su-pen icon default"
      />
    </div>
    <input
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with inputmode 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      inputmode="numeric"
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with invalid value 1`] = `
<div>
  <label
    class="input default left error"
  >
    <input
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with placeholder 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      placeholder="My placeholder"
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with type 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="password"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with value 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="text"
      value="My value"
    />
  </label>
</div>
`;
